# JobMatch-Crew-

./: .gitignore  README.md  pyproject.toml
app/: analysis_guardrails.py  config.py  database.py  jobmatch_crew.py  knowledge_loader.py  main.py  prompt_loader.py  report_parser.py  report_renderer.py  role_skill_repository.py  search_service.py
app/agent_pipeline/: evidence_judge.py  jd_extractor.py  orchestrator.py  report_writer.py  scorer.py  structured_runner.py
app/api/: action_items.py  analysis_tasks.py  copilot.py  health.py  job_match.py  job_search.py  market_match.py  reports.py  resumes.py  roles.py  system.py
app/data/: role_skill_map.json
app/prompts/: jd_analyst.md  market_match_analyst.md  match_scorer.md  report_writer.md  resume_analyst.md  resume_parser.md
app/rag/: retriever.py  (+1 more)
evals/: README.md  models.py
examples/: jd_sample.txt  output_report.md  resume_sample.txt
frontend/: api_client.py  streamlit_app.py  ui_helpers.py  views.py
frontend-web/: package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
knowledge/: agent_interview.md  backend_interview.md  database_interview.md  docker_interview.md  fastapi_interview.md  job_market_analysis.md  python_interview.md  rag_interview.md  resume_optimization.md
tests/: conftest.py  test_agent_pipeline.py  test_api_basic.py  test_copilot_evidence_api.py  test_jobmatch_service.py  test_local_runtime.py  test_market_match_service.py  test_market_profile.py  test_rag_retriever.py  test_report_parser.py  test_resume_api.py  test_resume_retriever.py  test_schemas.py
(+27 files in other folders)
