[project]
name = "jobmatch-crew"
version = "0.1.0"
description = "A market-driven multi-agent resume analysis assistant with FastAPI, CrewAI and lightweight RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[litellm]>=1.15.0",
    "fastapi>=0.138.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "requests>=2.34.2",
    "streamlit>=1.59.0",
    "tavily-python>=0.7.26",
    "uvicorn[standard]>=0.49.0",
]
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
